fixed start btn overlapping on instructions

--- a/Style.css
+++ b/Style.css
@@ -159,6 +159,12 @@ body {
     font-size: 18px;
 }
 
+#rule{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
 .question {
     border-radius: 5px;
     background-color: aliceblue;
